# database-engine

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  build-wsl.sh  vcpkg.json  your_program.sh
LearningJournal/: 06.inter_process_communication.md  07.unix_file_system_dictionary.md  08.unix_file_lifecycle.md  10.cpp_concurrency_pt2.md  11.cpp_concurrency_pt3.md  12.cpp_concurrency_pt4.md  13.thread_per_cpu_core.md  14.sql-client-implementation.md  20250421_shared_execution_context.md  20250424_process_models.md  20250426_process_pool.md  20250522_process_creation.md  20250602_inter_process_communication.md  20250602_unix_file_lifecycle.md  20250602_unix_file_system_dictionary.md  20250603_cpp_concurrency_pt1.md  20250607_cpp_concurrency_pt2.md  20250608_cpp_concurrency_pt3.md  20250611_cpp_concurrency_pt4.md  20250706_thread_per_cpu_core.md  20250709_sql-client-implementation.md  20250716_tcp_server_implementation.md  3.process_models.md  5.process_creation.md  9.cpp_concurrency_pt1.md
LessonsLearned/: 1.cross_platform_sql_parser.md  2.StorageManagerStrategy.md  2.shared_execution_context.md  3.ProcessPool.md
include/network/: server.hpp  tcpconnection.hpp
scripts/: build.sh  setup.sh
src/: Server.cpp  main.cpp  your_program
src/CommandHandler/: CommandHandler.cpp  CommandHandler.h
src/ExecutionContext/: ExecutionContext.h
src/FileManager/: FileManager.cpp  FileManager.h
src/Handlers/: CommandHandler.cpp  CommandHandler.h
src/ProcessPool/: Command.cpp  Command.h  ProcessPool.cpp  ProcessPool.h  Worker.cpp  Worker.h
src/QueryParser/: query.l  query.y
src/TCPServer/: Server.h
src/network/: server.cpp  tcpconnection.cpp
